--- a/openbanking-ui-master/packages/web-app/src/Accounts.css
+++ b/openbanking-ui-master/packages/web-app/src/Accounts.css
@@ -35,7 +35,7 @@
     padding: 12px;
     text-align: center;
     color: white;
-    background-color: teal;
+    background-color: rgb(17, 17, 66);
     border: none;
     text-decoration: none;
 }
